not yet functional

--- a/hooks/Makefile
+++ b/hooks/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-Os -nostdlib -nodefaultlibs -fPIC -Wl,-shared -Wall -pedantic
 
-all: setup_shadowmem call_verifier
+all: setup_shadowmem call_verifier shadow_init
 
 clean: 
-	@$(RM) setup_shadowmem call_verifier
+	@$(RM) setup_shadowmem call_verifier shadow_init
